--- a/reactapp/src/components/navigation/Navigation.css
+++ b/reactapp/src/components/navigation/Navigation.css
@@ -80,7 +80,7 @@
 .search-bar{
     float: left;
     margin: 0 50px 0 100px;
-    width: 500px;
+    width: 50%;
     transition: margin 0.3s ease-out;
 }
 
@@ -90,13 +90,13 @@
 
 .search{
     float: left;
-    width: 450px;
+    width: 80%;
     overflow: hidden;
 }
 
 #search{
     padding: 0 20px;
-    width: 440px;
+    width: 100%;
     display: block;
     outline: none;
     border: none;
@@ -108,7 +108,7 @@
 }
 
 .search-icon{
-    float: right;
+    float: left;
     width: 50px;
     height: 30px;
     background: #DAE1E7 url("raw/search_blue.png") center center no-repeat;
@@ -158,4 +158,32 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+.hide{
+    display: none;
+}
+
+@media only screen and (max-width: 1010px) {
+
+    .search-bar{
+        width: 80%;
+        margin: 0 10px 0 30px;
+    }
+
+    .right{
+        display: none;
+    }
+
+    .hide{
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+
+    .search-bar{
+        margin: 0 20px;
+    }
+
 }
