--- a/reactapp/src/components/navigation/Navigation.css
+++ b/reactapp/src/components/navigation/Navigation.css
@@ -169,16 +169,13 @@
     height: 30px;
     float: right;
     background-image: url("raw/logo.png");
+    display: block;
 }
 
 @media only screen and (max-width: 1050px) {
 
-    .logo{
-        display: none;
-    }
-
     .search-bar{
-        width: 80%;
+        width: 60%;
         margin: 0 10px 0 30px;
     }
 
@@ -188,6 +185,15 @@
 
     .hide{
         display: block;
+    }
+}
+
+@media only screen and (max-width: 720px){
+    .logo{
+        display: none;
+    }
+    .search-bar{
+       width: 80%;
     }
 }
 
