--- a/reactapp/src/components/footer/Footer.css
+++ b/reactapp/src/components/footer/Footer.css
@@ -1,8 +1,10 @@
 .foot-area{
     background-color: #0073b1;
     position: relative;
-    height: 350px;
+    height: auto;
+    overflow: hidden;
     font-family: Arial, serif;
+    padding-bottom: 15px;
 }
 
 .logo_1{
@@ -16,13 +18,18 @@
 
 .listing{
     margin-left: 300px;
-    padding: 20px 100px;
+    padding: 20px 10px 20px 50px;
+    overflow: hidden;
 }
 
 .lists{
-    float: left;
-    margin-right: 150px;
+    margin-right: 50px;
 }
+
+.floating_1, .floating_2, .floating_3{
+    float: left;
+}
+
 
 .listing .lists:last-child{
     margin-right: 0;
@@ -74,4 +81,38 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+@media only screen and (max-width: 1050px) {
+
+    .floating_3{
+        margin-top: 50px;
+        clear: both;
+    }
+
+}
+
+@media only screen and (max-width: 840px) {
+
+    .floating_2{
+        margin-top: 50px;
+        clear: both;
+    }
+
+}
+
+@media only screen and (max-width: 550px) {
+
+    .logo_1{
+        position: relative;
+    }
+
+    .listing{
+        margin-left: 0;
+    }
+
+    .floating_1{
+        clear: both;
+    }
+
 }
