--- a/reactapp/src/components/register/Register.css
+++ b/reactapp/src/components/register/Register.css
@@ -123,3 +123,31 @@ label{
     text-decoration: underline;
     color: #006097;
 }
+
+.pass-check{
+    width: 300px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    margin-top: -75px;
+    left: -340px;
+    padding: 0 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 5px #8f8f8f;
+    display: block;
+}
+
+.hide{
+    display: none;
+}
+
+.err{
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 5px;
+    color: #ff2b2b;
+}
+
+.success{
+    color: #02aa02;
+}
