Modified UI and added results page

--- a/reactapp/src/components/footer/Footer.css
+++ b/reactapp/src/components/footer/Footer.css
@@ -85,6 +85,10 @@
     bottom: 0;
 }
 
+.isDisabled{
+    pointer-events: none;
+}
+
 @media only screen and (max-width: 1050px) {
 
     .floating_3{
