--- a/reactapp/src/components/navigation/Navigation.css
+++ b/reactapp/src/components/navigation/Navigation.css
@@ -138,6 +138,7 @@
     text-overflow: ellipsis;
     overflow-x: hidden;
     transition: width 0.3s ease-out;
+    z-index: 1;
 }
 
 .right{
@@ -231,4 +232,8 @@
     .search-icon{
         width: 40px;
     }
+}
+
+.linkDisable{
+    pointer-events: none;
 }
