--- a/reactapp/src/components/profile/Profile.css
+++ b/reactapp/src/components/profile/Profile.css
@@ -97,11 +97,17 @@ label{
 
 @media only screen and (max-width: 900px) {
 
+    .profile-area{
+        flex-direction: column;
+    }
+
     .profile-image{
-        display: none;
+        margin: 0 auto;
     }
 
     .profile-details{
         margin-left: 0;
+        margin-top: 50px;
+        width: auto;
     }
 }
