--- a/reactapp/src/components/register/Register.css
+++ b/reactapp/src/components/register/Register.css
@@ -151,3 +151,16 @@ label{
 .success{
     color: #02aa02;
 }
+
+@media only screen and (max-width: 1110px) {
+
+    .pass-check{
+        width: auto;
+        height: auto;
+        margin-bottom: 20px;
+        position: relative;
+        left: 0;
+        top: 0;
+        margin-top: 0;
+    }
+}
